2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MIT.X11, AUTHORS, NEWS, README: Adding and moving basic files.
	* Monodoc.Editor/app.desktop: Add .desktop file.
	* Packages.mdse, Monodoc.Editor.mds: Minor changes.

2007-07-04  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added method AddPadding
	  that add a space in the buffer that is invisible so that certain
	  elements (like empty ones) are conserved.

2007-07-04  Hector E. Gomez Morales. <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Huge refactoring of
	  Serialize created three methods for each case. InsertStartElement
	  when we encounter the start of an element, InsertText when we
	  encounter Text, InsertEndElement when we encounter the end of an
	  element.

2007-07-01  Hector E. Gomez Morales <hectoregm@gmail.com> 

	

2007-06-29  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Added a padding between
	  empty elements.
	* Monodoc.Editor.Gui/DocumentTagTable.cs: Added almost all the tags
	  that represents elements and attributes used by monodoc.

2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor.Gui/DocumentBufferArchiver.cs: Using
	  IsSerializableText property for conditional.
	* Monodoc.Editor.Gui/DocumentTag.cs: Added a property named
	  IsSerializableText.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/EditorWindow.cs: Added handlers for Save and SaveAs
	  actions.
	* Monodoc.Editor/Monodoc.Editor.mdp,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.EditorWindow.cs,
	  Monodoc.Editor/gtk-gui/Monodoc.Editor.SaveDocDialog.cs,
	  Monodoc.Editor/gtk-gui/gui.stetic, Monodoc.Editor/SaveDocDialog.cs:
	  Added two new actions: Save and Save As. Added a new dialog for
	  Save As action.
	* Monodoc.Editor/OpenDocDialog.cs: Whitespace changes.

2007-06-21  Hector E. Gomez Morales <hectoregm@gmail.com> 
